recursion.lessons.recursion.tree.Tree.scala.error
Tree:10: error: not found: value lenght
	recule(lenght);
               ^